--- a/index.html
+++ b/index.html
@@ -1,9 +1,33 @@
 <!DOCTYPE html>
+
+
 <html>
+
+
 <head>
-	<title>Tetris</title>
+	<title>JavaScript Tutorial</title>
+	<script src="script.js" charset="utf-8"></script>
+	<link href="styles.css" rel="stylesheet">
 </head>
+
+
 <body>
-	<div></div>
+	
+	<div>
+		Box 1
+		<div>Sub-Box 1</div>
+		<div>Sub-Box 2</div>
+		<div class="abc">Sub-Box 1</div>
+	</div>
+	<br>
+	<div class="abc def" id="word">Box 2</div>
+	<br>
+	<div>Box 3</div>
+	<br>
+	<div>Box 4</div>
+
+
 </body>
+
+
 </html>
